--- a/App/pom.xml
+++ b/App/pom.xml
@@ -100,6 +100,7 @@
                     </bundlesList>
                     <resourcesList>
                         <item>logging.properties</item>
+                        <item>whisper.store</item>
                     </resourcesList>
                     <reflectionList>
                         <list>com.gluonhq.charm.glisten.control.TextField</list>
@@ -118,7 +119,7 @@
 <!--                        <list>com.gluonhq.attach.orientation.impl.DesktopOrientationService</list>-->
 <!--                        <list>com.gluonhq.attach.position.impl.DesktopPositionService</list>-->
                     </reflectionList>
-<!--                    <verbose>true</verbose>-->
+                        <verbose>false</verbose>
                     <mainClass>${mainClassName}</mainClass>
                     <releaseConfiguration>
                         <appLabel>ChatApp</appLabel>
@@ -151,19 +152,12 @@
             <artifactId>javafx-fxml</artifactId>
             <version>${javafxVersion}</version>
         </dependency>
-        <!-- TODO: Remove -->
-        <!--
         <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-swing</artifactId>
-            <version>${javafxVersion}</version>
+            <groupId>com.gluonhq</groupId>
+            <artifactId>wave</artifactId>
+            <version>0.9.0</version>
         </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-web</artifactId>
-            <version>${javafxVersion}</version>
-        </dependency>
-        -->
+
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
