--- a/App/src/main/resources/logging.properties
+++ b/App/src/main/resources/logging.properties
@@ -4,6 +4,6 @@ handlers = java.util.logging.ConsoleHandler
 java.util.logging.ConsoleHandler.level = FINEST
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
-com.gluonhq.connect.level = FINEST
+com.gluonhq.connect.level = INFO
 
-com.gluonhq.attach.level = FINE
+com.gluonhq.attach.level = INFO
