Show user name when a channel is selected (#73)
Co-authored-by: jose.pereda <jose.pereda@gluonhq.com>

--- a/App/src/main/resources/com/gluonhq/chat/views/chat.properties
+++ b/App/src/main/resources/com/gluonhq/chat/views/chat.properties
@@ -10,5 +10,6 @@ popup.location.icon=\uf041
 popup.location.text=Share your location
 textarea.prompt.text=Type something...
 select.channel=Please select a channel
+empty.channel=There are no messages in this channel yet
 unread.message=unread message
 unread.messages=unread messages
