Fix reflection config file typo and add missing method (#95)
Co-authored-by: jose.pereda <jose.pereda@gluonhq.com>

--- a/App/src/main/resources/META-INF/substrate/config/reflectionconfig.json
+++ b/App/src/main/resources/META-INF/substrate/config/reflectionconfig.json
@@ -538,7 +538,10 @@
   },
   {
     "name":"org.whispersystems.libsignal.state.StorageProtos$SessionStructure$Chain$MessageKey",
-    "methods":[{"name":"newBuilder","parameterTypes":[] }]
+    "methods":[
+      {"name":"newBuilder","parameterTypes":[] },
+      {"name":"getIndex","parameterTypes":[] }
+    ]
   },
   {
     "name":"org.whispersystems.signalservice.api.push.SignedPreKeyEntity",
