--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -33,9 +33,53 @@ jobs:
           cp -r App/target/gluonfx/x86_64-darwin/gvm/*.json staging
           cp -r App/target/gluonfx/x86_64-darwin/gvm/log/* staging
 
-      - name: Upload
+      - name: Upload native image
         uses: actions/upload-artifact@v2
         with:
-          name: Package
+          name: NativePackage
           path: staging
 
+      - name: Setup java
+          uses: actions/setup-java@v2
+          with:
+            distribution: 'temurin'
+            java-version: '17'
+
+      - uses: Apple-Actions/import-codesign-certs@v1
+          with:
+            p12-file-base64: ${{ secrets.CERTIFICATES_FILE_BASE64 }}
+            p12-password: ${{ secrets.CERTIFICATES_PASSWORD }}
+
+      - name: Build and package
+          run: mvn clean install && mvn package -f App
+
+      - name: Create Bundle using jpackage
+        id: outputfile
+        run: |
+          .github/scripts/build_app_mac.sh
+          echo ::set-output name=path::App/target/installer/ChatApp-${{ env.APP_VERSION }}.pkg
+        env:
+          GLUON_MACSIGN_PREFIX: ${{ secrets.GLUON_MACSIGN_PREFIX }}
+          GLUON_MACSIGN_USER: ${{ secrets.GLUON_MACSIGN_USER }}
+          PROJECT_VERSION: 1.1.0-SNAPSHOT
+          APP_VERSION: 1.0.0
+
+      - name: "Notarize Release Build"
+          uses: erwin1/xcode-notarize@main
+          with:
+            product-path: ${{ steps.outputfile.outputs.path }}
+            appstore-connect-username: ${{ secrets.NOTARIZATION_USERNAME }}
+            appstore-connect-password: ${{ secrets.NOTARIZATION_PASSWORD }}
+            primary-bundle-id: com.gluonhq.chat
+            asc-provider: ${{ secrets.GLUON_MACSIGN_PREFIX }}
+            verbose: true
+
+      - name: Copy installer to staging2
+          run: |
+            cp -r App/target/installer/ChatApp-$APP_VERSION.pkg staging2
+
+      - name: Upload installer
+          uses: actions/upload-artifact@v2
+          with:
+            name: InstallerPackage
+            path: staging2
