--- a/App/src/main/resources/META-INF/substrate/config/reflectionconfig.json
+++ b/App/src/main/resources/META-INF/substrate/config/reflectionconfig.json
@@ -1064,6 +1064,10 @@
     "methods":[{"name":"newBuilder","parameterTypes":[] }]
   },
   {
+    "name":"org.whispersystems.signalservice.internal.push.StaleDevices",
+    "methods":[{"name":"<init>","parameterTypes":[] }]
+  },
+  {
     "name":"org.whispersystems.signalservice.internal.util.JsonUtil$IdentityKeyDeserializer",
     "methods":[{"name":"<init>","parameterTypes":[] }]
   },
