--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -33,7 +33,8 @@ jobs:
           cp -r App/target/gluonfx/x86_64-darwin/gvm/*.json staging
           cp -r App/target/gluonfx/x86_64-darwin/gvm/log/* staging
 
-      - name: Notarize Native Build
+      - name: Notarize Native Build (disabled)
+        if: ${{ false }}
         uses: erwin1/xcode-notarize@main
         with:
           product-path: staging/ChatApp
@@ -77,7 +78,7 @@ jobs:
           PROJECT_VERSION: 1.1.0-SNAPSHOT
           APP_VERSION: 1.0.0
 
-      - name: Notarize Release Build
+      - name: Notarize Installer
         uses: erwin1/xcode-notarize@main
         with:
           product-path: ${{ steps.outputfile.outputs.path }}
