--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -42,3 +42,33 @@ jobs:
         with:
           name: Package
           path: staging
+
+      - name: Setup java
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Build and package
+        run: mvn clean install && mvn package -f App
+
+      - name: Create Bundle using jpackage
+        id: outputfile
+        run: |
+          .github/scripts/build_app_linux.sh \
+          --type deb
+          echo ::set-output name=pathDeb::App/target/installer/ChatApp-${{ env.APP_VERSION }}.deb
+          .github/scripts/build_app_linux.sh \
+          --type rpm
+          echo ::set-output name=pathRpm::App/target/installer/ChatApp-${{ env.APP_VERSION }}.rpm
+        env:
+          PROJECT_VERSION: 1.1.0-SNAPSHOT
+          APP_VERSION: 1.0.0
+
+      - name: Upload installer
+        uses: actions/upload-artifact@v2
+        with:
+          name: InstallerPackage
+          path: |
+            ${{ steps.outputfile.outputs.pathDeb }}
+            ${{ steps.outputfile.outputs.pathRpm }}
