--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -21,7 +21,9 @@ jobs:
           sudo apt install libasound2-dev libavcodec-dev libavformat-dev libavutil-dev libgl-dev libgtk-3-dev libpango1.0-dev libxtst-dev
 
       - name: Make staging directory
-        run: mkdir staging
+        run: |
+          mkdir staging
+          mkdir staging2
 
       - name: Gluon License
         uses: gluonhq/gluon-build-license@master
@@ -53,16 +55,15 @@ jobs:
         run: mvn clean install && mvn package -f App
 
       - name: Create Bundle using jpackage
-        id: outputfile
         run: |
           .github/scripts/build_app_linux.sh \
           --type deb
-          mv App/target/installer/*.deb App/target/installer/ChatApp-${{ env.APP_VERSION }}.deb
-          echo ::set-output name=pathDeb::App/target/installer/ChatApp-${{ env.APP_VERSION }}.deb
+          mv App/target/installer/*.deb staging2/ChatApp-${{ env.APP_VERSION }}.deb
+          echo ::set-output name=pathDeb::staging2/ChatApp-${{ env.APP_VERSION }}.deb
           .github/scripts/build_app_linux.sh \
           --type rpm
-          mv App/target/installer/*.rpm App/target/installer/ChatApp-${{ env.APP_VERSION }}.rpm
-          echo ::set-output name=pathRpm::App/target/installer/ChatApp-${{ env.APP_VERSION }}.rpm
+          mv App/target/installer/*.rpm staging2/ChatApp-${{ env.APP_VERSION }}.rpm
+          echo ::set-output name=pathRpm::staging2/ChatApp-${{ env.APP_VERSION }}.rpm
         env:
           PROJECT_VERSION: 1.1.0-SNAPSHOT
           APP_VERSION: 1.0.0
