Refactor receiptType and status icon (#119)
* Refactor receiptType and status icon

* Match style

* update chat bundle

Co-authored-by: jose.pereda <jose.pereda@gluonhq.com>

--- a/App/src/main/resources/com/gluonhq/chat/views/chat.properties
+++ b/App/src/main/resources/com/gluonhq/chat/views/chat.properties
@@ -1,7 +1,10 @@
 button.down.text=\uf0ab
 button.plus.text=\uf067
 button.send.text=\uf075
-label.status.check=\uf00c
+label.status.check.unknown=\uf00c
+label.status.check.delivery=\uf00c
+label.status.check.read=\uf00c\uf00c
+label.status.check.viewed=\uf00c\uf00c
 button.emoji.text=\uf118
 button.paperclip.text=\uf0c6
 popup.image.icon=\uf03e
