add missing jni config (#136)
use wave 0.9.7

--- a/App/src/main/resources/META-INF/substrate/config/reflectionconfig.json
+++ b/App/src/main/resources/META-INF/substrate/config/reflectionconfig.json
@@ -818,7 +818,8 @@
   },
   {
     "name":"org.whispersystems.signalservice.internal.push.SignalServiceProtos$DataMessage",
-    "methods":[{"name":"newBuilder","parameterTypes":[] }]
+    "methods":[{"name":"newBuilder","parameterTypes":[] },
+               {"name":"getBody","parameterTypes":[] }]
   },
   {
     "name":"org.whispersystems.signalservice.internal.push.SignalServiceProtos$NullMessage",
