One more reflection method needed... (#138)

--- a/App/src/main/resources/META-INF/substrate/config/reflectionconfig.json
+++ b/App/src/main/resources/META-INF/substrate/config/reflectionconfig.json
@@ -822,6 +822,10 @@
                {"name":"getBody","parameterTypes":[] }]
   },
   {
+    "name":"org.whispersystems.signalservice.internal.push.SignalServiceProtos$DataMessage$Builder",
+    "methods":[{"name":"getBody","parameterTypes":[] }]
+  },
+  {
     "name":"org.whispersystems.signalservice.internal.push.SignalServiceProtos$NullMessage",
     "methods":[{"name":"newBuilder","parameterTypes":[] }]
   },
