--- a/App/pom.xml
+++ b/App/pom.xml
@@ -300,18 +300,18 @@
         <dependency>
             <groupId>com.gluonhq.chatapp</groupId>
             <artifactId>ChatListView</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.1.0</version>
         </dependency>
         <dependency>
             <groupId>com.gluonhq.chatapp</groupId>
             <artifactId>EmojiData</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.1.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.gluonhq.chatapp</groupId>
             <artifactId>EmojiTextArea</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.1.0</version>
             <scope>compile</scope>
         </dependency>
         <!--<dependency>
@@ -336,12 +336,12 @@
                 <dependency>
                     <groupId>com.gluonhq.chatapp</groupId>
                     <artifactId>orientation</artifactId>
-                    <version>1.1.0-SNAPSHOT</version>
+                    <version>1.1.0</version>
                 </dependency>
                 <dependency>
                     <groupId>com.gluonhq.chatapp</groupId>
                     <artifactId>position</artifactId>
-                    <version>1.1.0-SNAPSHOT</version>
+                    <version>1.1.0</version>
                 </dependency>
 
                 <!-- Attach for javafx:run -->
